--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lodash": "^2.4.1",
     "id3js": "^1.1.2",
     "express": "^3.5.1",
-    "ws": "^0.4.31"
+    "ws": "^0.4.31",
+    "typescript": "^1.0.0",
+    "websocket-stream": "^0.5.1"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
