--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "id3js": "^1.1.2",
     "express": "^3.5.1",
     "ws": "^0.4.31",
-    "typescript": "^1.0.0",
     "websocket-stream": "^0.5.1"
   },
   "devDependencies": {
@@ -24,6 +23,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-cssmin": "^0.9.0"
+    "grunt-contrib-cssmin": "^0.9.0",
+    "less": "^1.7.0",
+    "grunt-contrib-less": "^0.11.0"
   }
 }
