--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "id3js": "^1.1.2",
     "express": "^3.5.1",
     "ws": "^0.4.31",
-    "websocket-stream": "^0.5.1"
+    "websocket-stream": "^0.5.1",
+    "async": "^0.7.0"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
