--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^3.5.1",
     "ws": "^0.4.31",
     "websocket-stream": "^0.5.1",
-    "async": "^0.7.0"
+    "async": "^0.7.0",
+    "musicmetadata": "^0.3.5"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
